alb/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: frontend
  namespace: frontend
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
  hostnames:
  - www.example.com
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: whereami-frontend
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
